src/objects/ensxapp__SAP_Pricing_Field_Definition__mdt.object
<CustomObject>
    <description>Definition of pricing field in SAP</description>
    <fields>
        <fullName>ensxapp__Can_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can this field be used to send data to SAP</description>
        <label>Can Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Can_Output__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can this field be used to output data to SAP</description>
        <label>Can Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Description__c</fullName>
        <description>Description of the field</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Field_Name__c</fullName>
        <description>Name of the field in SAP</description>
        <inlineHelpText>For stock SBO fields this should be the Friendly Field Name</inlineHelpText>
        <label>Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Field_Object__c</fullName>
        <description>For which object is this field defined</description>
        <label>Field Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                    <default>true</default>
                    <label>Header</label>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SAP Pricing Field Definition</label>
    <pluralLabel>SAP Pricing Field Definitions</pluralLabel>
    <validationRules>
        <fullName>ensxapp__Field_Supports_Input_or_Output</fullName>
        <active>true</active>
        <description>This field must support either input or output.</description>
        <errorConditionFormula>AND(
 NOT(ensxapp__Can_Input__c),
 NOT(ensxapp__Can_Output__c) 
)</errorConditionFormula>
        <errorMessage>Field must support Input, Output or both.</errorMessage>
    </validationRules>
</CustomObject>